--- a/project/docker/app/Dockerfile
+++ b/project/docker/app/Dockerfile
@@ -1,4 +1,5 @@
-FROM python:3
+FROM python:3.7.3
+ENV PYTHONUNBUFFERED 1
 
 COPY requirements.txt /code/
 WORKDIR /code/
@@ -6,4 +7,5 @@ RUN pip install -r requirements.txt
 
 COPY . /code/
 
+RUN ["chmod", "+x", "./docker/app/startup.sh"]
 CMD [ "./docker/app/startup.sh" ]
