--- a/project/docker/db-init/Dockerfile
+++ b/project/docker/db-init/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3
+FROM python:3.7.1
 
 RUN apt-get update && \
     apt-get install -y postgresql-client && \
@@ -9,6 +9,6 @@ WORKDIR /code/
 RUN pip install -r requirements.txt
 
 COPY . /code/
-
-RUN chmod +x ./docker/db-init/wait-for-postgres.sh
-CMD [ "./docker/db-init/wait-for-postgres.sh","db","./docker/db-init/startup/sh" ]
+RUN ["chmod", "+x", "./docker/db-init/wait-for-postgres.sh"]
+RUN ["chmod", "+x", "./docker/db-init/startup.sh"]
+CMD [ "./docker/db-init/wait-for-postgres.sh", "db", "./docker/db-init/startup.sh" ]
